--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-toast": "^1.2.7",
     "@shadcn/ui": "^0.0.4",
     "@tanstack/react-table": "^8.21.2",
     "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.8",
+    "@types/lodash": "^4.17.16",
     "axios": "^1.7.9",
     "chart.js": "^4.4.6",
     "class-variance-authority": "^0.7.1",
@@ -33,6 +35,7 @@
     "jose": "^5.9.6",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.475.0",
     "moment": "^2.30.1",
     "next": "^15.1.1",
